[package]
name = "reflection"
version = "0.1.0"
edition = "2021"

[dependencies]
http = { version = "1.1.0", default-features = false }
tokio = { version = "1.41.1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
tonic = { version = "0.12.3", default-features = false, features = [
    "tls",
    "tls-roots",
    "transport",
] }
tonic-health = "0.12.3"
tonic-reflection = { version = "0.12.3", default-features = false, features = [
    "server",
] }
tonic-web = { version = "0.12.3", default-features = false }
tower-http = { version = "0.6.2", default-features = false, features = ["cors"] }

[dependencies.service-apis]
git = "https://github.com/sited-io/service-apis.git"
version = "0.1.0"
default-features = false
features = ["proto_full"]
